--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Sal’s Strawberry Saloon</h1>
     <h2>(and other fruit products)</h2>
 
-    <button onclick="fb_authenticate()">Login with Google</button>
+    <button onclick="fb_initialise(); fb_authenticate()">Login with Google</button>
 
     <form id="fruitForm">
       <label for="name">Your Name:</label>
