--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h2>(and other fruit products)</h2>
 
     <button onclick="fb_initialise(); fb_authenticate()">Login with Google</button>
+    <button onclick="fb_ReadRec();">Email</button>
 
     <form id="fruitForm">
       <label for="name">Your Name:</label>
