--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,13 +8,14 @@
   <link rel="stylesheet" href="style.css" />
   <script type="module" src="./main.mjs"></script>
 </head>
+
 <body>
   <div class="container">
     <h1>Sal’s Strawberry Saloon</h1>
     <h2>(and other fruit products)</h2>
 
     <button onclick="fb_initialise(); fb_authenticate()">Login with Google</button>
-    <button onclick="fb_ReadRec();">Email</button>
+     <button onclick="fb_email_view()">Open Email</button>
 
     <form id="fruitForm">
       <label for="name">Your Name:</label>
@@ -33,4 +35,5 @@
     <p id="statusMessage"></p>
   </div>
 </body>
+
 </html>
